--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Sachin Mittal portfolio",
-  "name": "Sachin Mittal portfolio",
+  "short_name": "Vivek Thakore portfolio",
+  "name": "Vivek Thakore portfolio",
   "icons": [
     {
       "src": "favicon.ico",
