--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^5.0.0",
     "react-scrollable-anchor": "^0.6.1"
   },
   "scripts": {
